<resources>
    <string name="app_name">TourGuideApp</string>

    <string name="see_category">Seeing</string>
    <string name="art_category"><![CDATA[Art & Culture]]></string>
    <string name="dine_category">Dining</string>
    <string name="shop_category">Shopping</string>
    <string name="stay_category">Staying</string>

    <string-array name="categories">
        <item>@string/see_category</item>
        <item>@string/art_category</item>
        <item>@string/dine_category</item>
        <item>@string/shop_category</item>
        <item>@string/stay_category</item>

    </string-array>
    <string name="title_activity_detail">""</string>
    <string name="action_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, eos ei consequat aliquando intellegebat,
        id dolore percipit usu. Ei pro falli populo, ei vis vero porro omnesque. Ut has tempor
        voluptatum, conceptam neglegentur at his, te ubique forensibus est. Eu mea noster accusam
        abhorreant. Eam agam lobortis adipiscing cu. Aeterno invidunt ei eos, et mandamus conceptam
        duo. Id has aeque oblique repudiandae. Natum aeterno nam te, in aperiri eloquentiam quo.
        Volutpat deseruisse appellantur sed ea. Iudico fabulas efficiendi an eos, sonet mucius
        consetetur eu eos, soluta abhorreant ea mei. Est ne inermis delectus efficiendi.</string>
    <string name="location_icon">location icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="http_icon">http icon</string>
    <string name="time_icon">time icon</string>
    <string name="bullet">•</string>
    <string name="here_comes_address">Here comes address</string>
    <string name="here_comes_phone_no">Here comes phone no.</string>
    <string name="here_comes_website">Here comes website</string>
    <string name="here_come_opening_hours">Here come opening hours</string>
    <string name="location_image">location image</string>
    <string name="web">romaniatourism.com/bucharest.html</string>
    <string name="latitude">44.435525</string>
    <string name="longitude">26.102512</string>
    <string name="triumphal_arch">Triumphal Arch</string>
    <string name="land_free">Landmark • Free</string>
    <string name="athenaeum">Romanian Athenaeum</string>
    <string name="concert">Architecture • Concert Hall</string>
    <string name="mansion">Ceausescu Mansion</string>
    <string name="museum">Museum</string>
    <string name="old_court"><![CDATA[Old Princely Court & Church]]></string>
    <string name="open_museum">Open Air Museum</string>
    <string name="parliament">Parliament Palace</string>
    <string name="landmark">Landmark</string>
    <string name="stavropoleos">Stavropoleos Church</string>
    <string name="architecture">Architecture</string>
    <string name="art_collection">Art Collection Museum</string>
    <string name="village_museum">National Village Museum</string>
    <string name="antipa">Grigore Antipa Museum of Natural History</string>
    <string name="pallady">Theodor Pallady Museum</string>
    <string name="museum_art">Museum • Art Gallery</string>
    <string name="kitsch">Romanian Kitsch Museum</string>
    <string name="history">National History Museum of Romania</string>
    <string name="unirea">Unirea Shopping Center</string>
    <string name="shopping">Shopping Center</string>
    <string name="afi">AFI Palace Cotroceni Mall</string>
    <string name="mall">Mall</string>
    <string name="peasant">Museum of the Romanian Peasant Gift Shop</string>
    <string name="folk">Folk-Art Shop</string>
    <string name="carusel">Carturesti Carusel</string>
    <string name="books"><![CDATA[Books & Gifts]]></string>
    <string name="tei">Hanul cu Tei</string>
    <string name="souvenirs"><![CDATA[Souvenirs & Gifts]]></string>
    <string name="vitan">Targul Vitan</string>
    <string name="market">Flea Market</string>
    <string name="caru">Caru\' cu Bere</string>
    <string name="rom2">Romanian • $$</string>
    <string name="lacrimi">Lacrimi si Sfinti</string>
    <string name="rom3">Romanian • $$$</string>
    <string name="artist">the Artist</string>
    <string name="eur4">European • $$$$</string>
    <string name="osho">OSHO</string>
    <string name="steak4">Steakhouse • $$$$</string>
    <string name="yuki">YUKI japanese home dining</string>
    <string name="jap2">Japanese • $$</string>
    <string name="becas">Beca\'s Kitchen - Homemade Food</string>
    <string name="sea_med2">Seafood, Mediterranean • $$</string>
    <string name="epoque">Epoque Hotel</string>
    <string name="hotel3">Hotel • $$$</string>
    <string name="rembrandt">Rembrandt Hotel</string>
    <string name="hotel2">Hotel • $$</string>
    <string name="inter">Bucuresti Intercontinental Hotel</string>
    <string name="hostel1">Hostel • $</string>
    <string name="zet">Z Hotel</string>
    <string name="capsa">Hotel Casa Capsa</string>
    <string name="little">Little Bucharest Old Town Hostel</string>
</resources>
